--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^8.0.0",
     "expo": "^30.0.1",
+    "expo-cli": "^2.3.6",
     "link": "^0.1.5",
     "native-base": "^2.8.1",
     "react": "16.3.1",
